General fixes to the css in the framework.
Breadcrumbs and fields layout fixes.
Padding for tabs and panels
Header tabs to appear as square blocks
Top tabs styles refinement
Removed extra padding from CMSmain
Icon and button adjustments

Conflicts:
	admin/css/screen.css
	admin/scss/_style.scss

--- a/admin/scss/_forms.scss
+++ b/admin/scss/_forms.scss
@@ -165,6 +165,20 @@ form.stacked .field, .field.stacked {
 	}
 }
 
+form .fieldgroup {
+	border-bottom: 1px solid rgba(201, 205, 206, 0.8);
+    box-shadow: 0 1px 0 rgba(244, 245, 245, 0.8);
+    display: block;
+    margin: 0 0 8px;
+    padding: 0 0 7px;
+    .fieldgroup {
+    	border-bottom: none;
+    	box-shadow: none;
+    	padding-bottom: 0;
+    	margin-bottom: 0;
+    }
+}
+
 form.small .field, .field.small {
 	label {
 		&.left {
@@ -295,6 +309,10 @@ form.small .field, .field.small {
 	.Actions {
 		max-height: 28px;
 		overflow: auto;
+		padding: 8px 12px;
+	}
+	.south .Actions, .ui-tabs-panel .Actions,  .ui-tabs-panel iframe .Actions {
+		padding: 0;
 	}
 
 	input.loading, button.loading,
@@ -485,10 +503,11 @@ form.small .field, .field.small {
 }
 
 .ss-toggle {
-	margin-bottom: $grid-y;
+	margin: $grid-y 0;
 
 	.ui-accordion-header {
 		font-weight: bold;
+		font-size: 12px;
 
 		&.ui-state-default {
 			@include background-image(
@@ -496,18 +515,31 @@ form.small .field, .field.small {
 			);
 			text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
 		}
+		.ui-accordion-header-icon {
+			margin-top: -9px;
+		}
 	}
 
 	.ui-accordion-content {
-		padding: $grid-y*2 0 $grid-y 0;
+		padding: $grid-y 0 $grid-y*1.5;
 
 		.field {
 			@include box-shadow(none);
-			padding-left: $grid-x*2;
-			padding-right: $grid-x*2;
+			padding-left: $grid-x*1.5;
+			padding-right: $grid-x*1.5;
 
 			&:last-child {
 				margin-bottom: 0;
+			}
+			.middleColumn {
+				margin-left: 0;
+			}
+			label {
+				float: none;
+				margin-left: 0;
+			}
+			.help {
+				margin-left: 0;
 			}
 		}
 	}
@@ -547,12 +579,14 @@ input.radio {
  * ---------------------------------------------------- */
 .optionset {
 	padding-bottom: 8px;
+	padding-top: 8px;
 	
 	li {
 		float: left;
 		display: block;
 		width: $grid-x * 27;
 		padding-bottom: $grid-x;
+		padding-top: 0;
 		line-height: $grid-y * 2;
 		list-style: none;
 
@@ -568,6 +602,9 @@ input.radio {
 			padding-left: $grid-y;
 		}
 
+	}
+	&.field {
+		padding-top: 0;
 	}
 	
 }
