--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -120,7 +120,7 @@ body.cms {
 
 	.cms-content-header-info {
 		float:left;
-		line-height: 40px; // same as tabs
+		line-height: 34px; 
 	}
 	
 	// Reset to default styles
@@ -162,7 +162,7 @@ body.cms {
 	.ui-tabs-nav {
 		float: right;
 		margin: 0 0 -1px 0;
-		padding: 0 $grid-x*2 0 0;
+		padding: 0 $grid-x*1.5 0 0;
 		border-bottom: none;
 
 		~ .ui-tabs-panel {
@@ -203,8 +203,7 @@ body.cms {
 		.ui-state-active {
 			padding-bottom:1px;
 			border:1px solid $color-button-generic-border;
-			// needs a background image to overlay the divider line
-			background: url("../images/textures/bg_cms_main_content.png") repeat left top #F0F3F4;
+			background-color: $tab-panel-texture-color;
 
 			a {
 				color: $color-text;
@@ -238,26 +237,43 @@ body.cms {
 		}
 	}
 
-	.cms-edit-form {
-		padding: $grid-x $grid-y*2 0 $grid-y*2;
-
-		.ui-tabs-panel {
-			padding-left: 0;
-			padding-right: 0;
+	.cms-edit-form, .cms-content-fields { /*not sure if .cms-content-fields effects other areas*/
+		.cms-panel-padded { /* Has padded area inside it */
+			padding: 0;
+			margin: 0;	
 		}
-
+		.ui-tabs-panel, .ss-gridfield  {
+			margin: 12px;
+			padding: 0 0 12px;
+			.ss-gridfield { 						/* Files area & inside second level tabs */
+				padding: 0; 						/* should be zero ideally */
+				margin: 0 0 12px;
+			}
+		}
 		.ui-tabs-nav {
-			padding-right: 0;
+			margin: 10px 12px 0;
+			padding: 0 8px 0 0;						/* second set of tabs */
+		}
+		#tree_actions .ui-tabs-nav{
+			margin: 0;
 		}
 	}
 
-	.cms-panel-padded .ui-tabs-panel {
-		padding: 0;	// Removes double paddle around main pages page, does not effect other areas of the site
-
-		.ui-tabs-panel {
-			// Reset nested tabs to default styling
-			padding: $grid-x 0 0 0;
+	.cms-panel-padded {
+		h3 {
+			margin-left: 12px;						/* reports headers, probably too specific */
 		}
+		.ui-tabs-panel {
+			margin: 0;
+			padding: 12px 12px 12px;
+
+			.ui-tabs-panel {
+				padding: $grid-x 0 0 0;
+			}
+		}
+	}
+	.ui-tabs .ui-tabs-panel {						/* second level tabs */
+		padding-top: 8px;
 	}
 
 	&.ss-tabset-tabshidden .ui-tabs-panel {
@@ -278,7 +294,11 @@ body.cms {
  * Primary styles which sit on top of screen, with different tab colors.
  * TODO Only use one "primary" selector and fix HTMLEditorField TabSet addExtraClass()
  */
-.ui-tabs.cms-tabset-primary .ui-tabs-nav, .ui-tabs .ui-tabs-nav.cms-tabset-nav-primary {
+.ui-tabs.cms-tabset-primary .ui-tabs-nav, 
+.ui-tabs .ui-tabs-nav.cms-tabset-nav-primary, 
+.ui-tabs .cms-content-header-tabs .ui-tabs-nav {
+	border-left: 1px solid darken($color-tab, 15%);
+	
 	li {
 		margin-right: 0; // tabs are directly adjacent
 		margin-top: 0;
@@ -314,7 +334,7 @@ body.cms {
 		border-top: none;
 		border: {
 			right-color: darken($color-tab, 15%); // same color as divider between header and body, needed for IE
-			left-color: darken($color-tab, 15%);
+			left-color: $tab-panel-texture-color;
 		}
 		z-index:2;
 		
@@ -425,7 +445,7 @@ body.cms {
 .message {												// White
 	display: block;
 	clear: both;
-	margin: 0 0 $grid-y 0;
+	margin: $grid-y 0;
 	padding: $grid-y + $grid-x/4 $grid-x + $grid-x/2;
 	font-weight: normal;	
 	border: 1px #ccc solid;
@@ -454,6 +474,9 @@ body.cms {
 	p {
 		margin: 0;
 	}
+}
+p.message {
+	margin-bottom: $grid-y*1.5;
 }
 
 /** --------------------------------------------
@@ -1267,13 +1290,6 @@ form.member-profile-form {
 	}
 }
 
-.cms {
-	.cms-panel-padded {
-		padding: $grid-y $grid-x*2 $grid-y*2;
-		margin:0;
-	}
-}
-
 /** ------------------------------------------------------------------
 * Dialog
 * 
@@ -1682,12 +1698,12 @@ form.import-form {
  * Page Edit Controller
  * -------------------------------------------- */
 
-.cms-container {
+/*.cms-container {
 	.CMSPageEditController, .CMSPageSettingsController, .CMSPageHistoryController {
 		// Fix pixel gap between nav tree and main page header
 	 	margin-left: -1px; // Removed to close gap far right of right tabs?
 	}
-}
+}*/
 
 /** --------------------------------------------
  * Page Settings Controller
@@ -1697,7 +1713,6 @@ form.import-form {
 	.tab#Root_Settings {
 		.optionset li {
 			white-space:nowrap;
-			padding-top:$grid-y;
 			label {
 				padding-left:2px;
 			}
